# my_mpd_client

./: CMakeLists.txt  client.cpp
src/: client.cpp  client.hpp  main.cpp  mmpd.cpp  mmpd.hpp  parser.cpp  parser.hpp
